--- a/team-builder/src/App.css
+++ b/team-builder/src/App.css
@@ -1,33 +1,42 @@
 .App {
   text-align: center;
+  font-size:62.5%;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+h1 {
+  font-size:3rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.submission {
+  margin:3%;
+  display:flex;
+  flex-direction:column;
+  font-size:1.5rem;
+  width:50%;
+  margin-left:25%;
+  margin-right:25%;
+
 }
 
-.App-link {
-  color: #61dafb;
+.inputs{
+  margin:3%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button {
+  margin-top:3%;
+}
+
+.form {
+  border:2px solid black;
+  border-radius:5%;
+  width: 25%;
+  margin-left:22%;
+}
+
+.form h2 {
+  font-size: 2rem;
+}
+
+.form p {
+  font-size: 1.5rem;
 }
